Secure relay connection

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         </template>
         <script>
 const pool = new window.NostrTools.SimplePool();
-const relays = ['wss://relay.anoma.li', 'ws://139.59.52.81:7000'];
+const relays = ['wss://relay.anoma.li', 'wss://relay01.anoma.li'];
 const main = () => ({
     optionsShowed: false,
     optionsNameShowed: false,
